--- a/pages/hw01.html
+++ b/pages/hw01.html
@@ -56,65 +56,57 @@
     <div class="product01">
         <div class="link01">
 			<!--傳值範例-->
-			<form action="hw02.html" method="POST">
+            <a href="../pages/hw02.html">
                 <img src="../assets/img/img25.jpg" class="img01" >
                 <p>🌸小黃花配色花花手機掛繩🌸</p>
-				<button type="submit" name="pro" value="1">前往選購
-			</form>
+            </a>
 			<!--傳值範例-->
         </div>
         <div class="link02">
-				<form action="hw03.html" method="POST">
+				<a href="../pages/hw03.html">
 					<img src="../assets/img/img13.jpg" class="img02" >
 					<p>🧉珍珠奶茶造型飲料提袋🧉</p>
-					<button type="submit" name="pro" value="2">前往選購
-				</form>
+                </a>
         </div>
         <div class="link03">
-		    <form action="hw04.html" method="POST">
+		    <a href="../pages/hw04.html">
                 <img src="../assets/img/img16.jpg" class="img03" >
                 <p>🥤純色網格飲料提袋🥤</p>
-				<button type="submit" name="pro" value="3">前往選購
-			</form>
+            </a>
 
         </div>
         <div class="link04">
-             <form action="hw05.html" method="POST">
+             <a href="../pages/hw05.html">
                 <img src="../assets/img/img26.jpg" class="img04" >
                 <p>👛祖母方格文青少女小廢包👛</p>
-				<button type="submit" name="pro" value="4">前往選購
-			</form> 
+             </a> 
          </div>
     </div>
     <div class="product02">
         <div class="link01">
-            <form action="hw06.html" method="POST">
+            <a href="../pages/hw06.html">
                 <img src="../assets/img/img05.jpg" class="img05" >
                 <p>🌺桔梗鏤空花花證件掛繩🌺</p>
-				<button type="submit" name="pro" value="5">前往選購
-			</form> 
+			</a> 
             
         </div>
         <div class="link02">
-            <form action="hw07.html" method="POST">
+            <a href="../pages/hw07.html">
                 <img src="../assets/img/img29.jpg" class="img06" >
                 <p>⚽️男女通吃四股辮手機掛繩⚽️</p>
-               <button type="submit" name="pro" value="6">前往選購
-			</form> 
+            </a>
         </div>
         <div class="link03">
-            <form action="hw08.html" method="POST">
+            <a href="../pages/hw08.html">
                 <img src="../assets/img/img31.jpg" class="img07" >
                 <p>🥤雙色網格飲料提袋🥤</p>
-				<button type="submit" name="pro" value="7">前往選購
-			</form>
+            </a>
         </div>
         <div class="link04">
-            <form action="hw09.html" method="POST">
+            <a href="../pages/hw09.html">
                 <img src="../assets/img/img30.jpg" class="img08" >
                 <p>👜純色鏤空俏皮小包👜</p>
-				<button type="submit" name="pro" value="8">前往選購
-			</form> 
+			</a> 
          </div>
     </div>
 
